[package]
name = "scene_builder"
version = "2.0.0"
description = "Tool to create SLP+ animation packs"
authors = ["Scrab, I unpause"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.75.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8.7"
postcard = "1.0.4"
rand = "0.8.5"
once_cell = "1.17.1"
nanoid = "0.4.0"
bitflags = "2.3.3"
fern = "0.6.2"
log = "0.4.19"
tauri-plugin-cli = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
dirs = "5"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
